@@ -5,8 +5,6 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -18,10 +16,10 @@ class ExpressionTest {
     class calculateTests {
         static Stream<Arguments> dataFor_Should_CalculateCorrectResult_When_CorrectInput() {
             return Stream.of(
-                    Arguments.of(new ArrayList<>(Arrays.asList("4", "*", "0", "+", "3")), 3),//List.of
-                    Arguments.of(new ArrayList<>(Arrays.asList("2", "/", "4", "-", "1")), -0.5),
-                    Arguments.of(new ArrayList<>(Arrays.asList("50", "/", "0.1")), 500.0),
-                    Arguments.of(new ArrayList<>(List.of("4")), 4));
+                    Arguments.of(List.of("4", "*", "0", "+", "3"), 3),
+                    Arguments.of(List.of("2", "/", "4", "-", "1"), -0.5),
+                    Arguments.of(List.of("50", "/", "0.1"), 500.0),
+                    Arguments.of(List.of("4"), 4));
         }
 
         @ParameterizedTest
